# polypy

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  justfile  prometheus.yml  pyproject.toml
.claude/agents/: thoughts-analyser.md  thoughts-locator.md  ticket-writer.md
.claude/commands/: coach.md  create_plan.md  implement_plan.md  research_codebase.md
.claude/scripts/: run_silent.sh  smart_wrap.sh  spec_metadata.sh
.claude/skills/stacked-pr/: SKILL.md
.github/workflows/: ci.yml  frontend-ci.yml
lessons/: 001_basics.md  002_asyncio.md  003_multiprocessing.md  004_shared_memory.md  005_actor_model.md  006_serialisation.md  007_flow_control.md  008_production.md  learning_path.md  polymarket_websocket_system_spec.md
scripts/: test_gamma_api.py
src/: app.py  exceptions.py  logging_config.py  main.py  message_router.py  message_source.py  router.py  state_machine.py  worker.py
src/connection/: pool.py  stats.py  types.py  websocket.py
src/core/: config.py  logging.py
src/exercises/: state_machine.py
src/lifecycle/: __init__.py  api.py  controller.py  recycler.py  types.py
src/messages/: parser.py  protocol.py
src/metrics/: __init__.py  prometheus.py
src/orderbook/: __init__.py  orderbook.py  orderbook_store.py
src/registry/: __init__.py  asset_entry.py  asset_registry.py
src/server/: __init__.py  server.py  websocket_errors.py  websocket_handler.py
src/worker/: manager.py  protocol.py  stats.py  worker.py
tests/: conftest.py  test_app.py  test_app_integration.py  test_connection.py  test_http_server.py  test_lifecycle_controller.py  test_lifecycle_integration.py  test_metrics_prometheus.py  test_orderbook.py  test_parser.py  test_pool.py  test_pool_integration.py  test_protocol.py  test_recycler.py  test_recycler_integration.py  test_registry.py  test_router.py  test_worker.py  test_worker_integration.py
tests/lifecycle/: test_lifecycle_api.py
tests/messages/: test_protocol.py
tests/orderbook/: test_orderbook.py
tests/server/: test_websocket_handler.py
tests/worker/: test_worker.py  test_worker_integration.py  test_worker_manager.py  test_worker_protocol.py  test_worker_stats.py
thoughts/: CLAUDE.md  elliotsteene  global  shared
ui/: package-lock.json  vite.config.ts
ui/src/: App.css  App.tsx
(+11 files in other folders)
